fixed some overflow issues

--- a/src/client/app/styles/scss/style.scss
+++ b/src/client/app/styles/scss/style.scss
@@ -9,10 +9,6 @@ html {
 	font-family: $mainFont; 	
 }
 
-.slide {
-	position: relative;
-}
-
 .placeholder-10 {
 	height: 50px;
 }
@@ -27,7 +23,7 @@ html {
 
 body {
 	margin:0;
-	width: 100vw;
+	width: 100%;
 	position: relative;
 }
 
@@ -38,10 +34,8 @@ body {
 .slide {
 	width: 100%;
 	height: 100vh;
-}
-
-#app {
-	width:100%;
+	overflow-x: hidden;
+	position: relative;
 }
 
 
