--- a/src/client/public/bundle.css
+++ b/src/client/public/bundle.css
@@ -433,9 +433,6 @@ p {
 html {
   font-family: "Pontano Sans", sans-serif; }
 
-.slide {
-  position: relative; }
-
 .placeholder-10 {
   height: 50px; }
 
@@ -447,7 +444,7 @@ html {
 
 body {
   margin: 0;
-  width: 100vw;
+  width: 100%;
   position: relative; }
 
 .text-center {
@@ -455,10 +452,9 @@ body {
 
 .slide {
   width: 100%;
-  height: 100vh; }
-
-#app {
-  width: 100%; }
+  height: 100vh;
+  overflow-x: hidden;
+  position: relative; }
 
 #slide01 {
   background-color: #0f8bad; }
